[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "anycrc"
version = "1.3.2"
description = "The fastest Python CRC Library"
readme = "README.md"
license = {text = "Zlib"}
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/marzooqy/anycrc"

[tool.cibuildwheel]
skip = "pp*"

[[tool.setuptools.ext-modules]]
name = "anycrc.crc"
sources = [
    "src/anycrc/crc.pyx",
    "lib/crcany/model.c",
    "lib/crcany/crc.c"
]
